# merkle-evidence-vault

./: .gitignore  .grype.yaml  .yamllint  AGENTS.md  CHANGELOG.md  CONFIDENCE.md  CONFIDENCE.yaml  CONTRIBUTING.md  IMPLEMENTATION_PLAN.md  LICENSE  Makefile  NEXT_STEPS.md  PRODUCTION_READINESS_AND_IMPLEMENTATION_PLAN.md  README.md  go.work  go.work.sum  merkle.md  package-lock.json
.github/: CODEOWNERS  labeler.yml  pull_request_template.md
.github/workflows/: artifact-guard.yml  ci.yml  ci_fuzz.yml  drill-restore.yml  fuzz.yml  pr_hygiene.yml  release-governance.yml
api/openapi/: vault.yaml
api/proto/: vault.proto
domain/checkpoint/: types.go
domain/evidence/: types.go
domain/merkle/: interface.go
evidence/: ADR-001-merkle-variant.md  ADR-002-signing-scheme.md  architecture.md
evidence/runbooks/: key-rotation.md  merkle-engine-down.md  stale-checkpoint.md
frontend/audit-dashboard/: package-lock.json  package.json  vite.config.js
fuzz/: dict.txt  last_run_meta.md  minimize_crash.sh  replay_minimized.sh
observability/: prometheus.yml
observability/alerts/: vault.yaml
observability/dashboards/: vault-overview.json
scripts/: ci_jwks.go  cleanup.ps1  drill_restore.ps1  drill_restore.sh  game_day_merkle_down.ps1  game_day_merkle_down.sh  pin_ci.sh  proof_pack.sh  run-integration.ps1
security/: VULN_POLICY.md  threat-model.md
services/merkle-engine/fuzz/: Cargo.toml  README.md  run_cargo_fuzz.sh  run_fuzz.sh
services/merkle-engine/fuzz/fuzz_targets/: mod.rs  tree_append_leaf.rs
services/merkle-engine/fuzz/src/: main.rs
tests/: go.mod
(+138 files in other folders)
