[package]
name = "merkle-fuzz"
version = "0.1.0"
edition = "2021"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
merkle-engine = { path = ".." }
rand = "0.8"

[lib]
name = "fuzz_targets"
path = "fuzz_targets/mod.rs"
crate-type = ["cdylib"]

[profile.release]
opt-level = 3

[[bin]]
name = "tree_append_leaf"
path = "bin/tree_append_leaf.rs"
